Correções em motorista e cobrador + alterações na estrutura da view trajeto

--- a/application/views/scripts/cobrador/index.phtml
+++ b/application/views/scripts/cobrador/index.phtml
@@ -161,6 +161,10 @@
 							Gravar
 						</button>
 
+						<button class="btn btn-outline-danger btn-lg btn-block" type="button" id="cancelar"  >
+							Cancelar
+						</button>
+
 						</div>
 
 
@@ -251,11 +255,15 @@
 	
 <!-- </div> -->
 	
-	<script>
+	
 		
-		
+		<script>
+		$("button#cancelar").click(function(){
+      	      location.href = baseUrl + 'cobrador';
+        });
+ 	</script>
 
-	</script>
+	
 
 </div>
 </div>
