Botões on off funcionando também com o backend, formas de pagamento quase pronta

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -55,6 +55,7 @@
         </div>
 
         <script type="text/javascript" src="<?= $this->baseUrl('dist/js/jquery-3.3.1.js') ?>"></script>
+        <script type="text/javascript" src="<?= $this->baseUrl('dist/js/bootstrap.js') ?>"></script>
         <script type="text/javascript" src="<?= $this->baseUrl('dist/js/mask.js') ?>"></script>
         <script type="text/javascript" src="<?= $this->baseUrl('dist/js/categoria.js') ?>"></script>
         <?= $this->headScript(); ?>
