--- a/application/views/scripts/categoria-onibus/index.phtml
+++ b/application/views/scripts/categoria-onibus/index.phtml
@@ -1,8 +1,24 @@
-<div class="container">
-	<link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/forma-pagamento.css") ?> />
+<div class="container-fluid">
+	<link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/forma-pagamento.css")?> />
   <div class="row">
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script>
+
+
+    $(document).ready(function(){
+
+      $("div#oculto").hide();
+
+      $("button#botao").click(function(){
+        $("div#oculto").toggle("slow");
+      });
+    });
+
+  </script>
+
     <div class="col-lg-2"></div>
-    <div class="col-lg-8">
+    <div class="col-8">
 
       <ol class="breadcrumb" style="background-color:rgba(0,0,0,0.8);">
         <li>
@@ -17,27 +33,10 @@
 
       <form method="POST">
 
-
-
-
-       <script>
-        $(document).ready(function(){
-          $("div#cad_collapse").hide();
-
-          $("button#cad_categoria").click(function(){
-            $("div#cad_collapse").toggle("slow");
-          });
-        });
-
-      </script>
-
-
-
       <div class="card mb-3" style="background-color:rgba(0,0,0,0.8);">
-        <div class="card-body">
+        <div class="card-body" id="oculto">
           <div id="cad_collapse">
             <div class="form-group">
-              <label for="">Descrição</label>
               <input type="text" class="form-control" id="descricao" name="descricao" placeholder="Digite a descrição" required/>
             </div>
             <div class="alert alert-danger diferente" style="display: none;" role="alert">
@@ -61,8 +60,8 @@
             <div class="alert alert-success" style="display: none;" role="alert">
               Cadastro de tarifa realizado com sucesso!
             </div>
-            <button type="button" class="btn btn-block btn-primary cadastrarTarifa">Cadastrar</button>
-            <a href="../public/menuinicial" class="btn btn-block btn-danger btn-primary">Voltar</a>
+            <button type="button" class="col-lg-2  btn btn-primary cadastrarTarifa">Cadastrar</button>
+            <a href="../public/menuinicial" class="col-lg-2  btn btn-primary">Voltar</a>
           </div>
         </div>
 
@@ -71,8 +70,8 @@
 
 
         <div>
-
-          <label>Categorias Cadastradas:</label>
+        <button type="button" id="botao" class="btn btn-block btn-primary">Nova categoria</button>
+          <label><H2>Categorias Cadastradas:</H2></label>
           <table class="table" >
             <thead>
               <tr>
@@ -93,9 +92,9 @@
                   <td><?= $categoria_onibus->getId_categoria_onibus() ?></td>
                   <td><?= $categoria_onibus->getDescricao() ?> </td>
                   <td><?= $categoria_onibus->getTarifa() ?>  </td>
-                  <td><i class="fas fas-eye"><a class="btn btn-info btn-labeled" href="<?= $this->baseUrl('categoria-onibus/editar/id/'. $categoria_onibus['id_categoria_onibus']) ?>" >Editar </a></i></td>
+                  <td><i class="fas fas-eye"><a class="btn btn-primary btn-labeled" href="<?= $this->baseUrl('categoria-onibus/editar/id/'. $categoria_onibus['id_categoria_onibus']) ?>" >Editar </a></i></td>
                 </tr>
-
+  
 
 
               <? endforeach; ?>
