--- a/application/views/scripts/parada-onibus/editar.phtml
+++ b/application/views/scripts/parada-onibus/editar.phtml
@@ -3,7 +3,7 @@
   <div class="row">
   <div class="col-lg-2"></div>
     <div class="col-lg-8">
-       <ol class="breadcrumb" style="background-color:rgba(0,0,0,0.8);">
+       <ol class="breadcrumb" style="background-color:rgba(0,0,0,0.7);">
                 <li>
                   <a href="<?= $this->baseUrl('menuinicial') ?>">
                     menuinicial/
@@ -32,7 +32,7 @@
 
 
 
- <div class="card mb-3" style="background-color:rgba(0,0,0,0.8);">
+ <div class="card mb-3" style="background-color:rgba(0,0,0,0.7);">
   <div class="card-body">
   <div class="input-group xmb-3">
   <div class="input-group-prepend">
@@ -57,8 +57,8 @@
       </div>
 
 <br>
-  <button type="submit" class="btn btn-block btn-primary">Editar</button>
-  <a href="<?= $this->baseUrl('categoria-onibus') ?>" class="btn btn-block btn-danger btn-primary">Voltar</a>
+  <button type="submit" class="col-lg-2 btn btn-primary">Salvar</button>
+  <a href="<?= $this->baseUrl('categoria-onibus') ?>" class="col-lg-2 btn btn-primary">Voltar</a>
 
 
 
