--- a/application/views/scripts/parada-onibus/index.phtml
+++ b/application/views/scripts/parada-onibus/index.phtml
@@ -1,21 +1,37 @@
 <div class="container">
 	<link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/forma-pagamento.css") ?> />
-  <div class="row">
-    <div class="col-lg-2"></div>
-    <div class="col-lg-8">
 
-      <ol class="breadcrumb" style="background-color:rgba(0,0,0,0.8);">
-        <li>
-          <a href="<?= $this->baseUrl('menuinicial') ?>">
-            menuinicial/
-          </a>
-        </li>
-        <li class="active">
-          parada_onibus
-        </li>
-      </ol>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+ <script>
 
-      <form method="POST">
+
+  $(document).ready(function(){
+
+    $("div#oculto").hide();
+
+    $("button#botao").click(function(){
+      $("div#oculto").toggle("slow");
+    });
+  });
+
+</script>
+
+<div class="row">
+  <div class="col-lg-2"></div>
+  <div class="col-lg-8">
+
+    <ol class="breadcrumb" style="background-color:rgba(0,0,0,0.7);">
+      <li>
+        <a href="<?= $this->baseUrl('menuinicial') ?>">
+          menuinicial/
+        </a>
+      </li>
+      <li class="active">
+        parada_onibus
+      </li>
+    </ol>
+
+    <form method="POST">
 
 
  <script>//Validar somente numero
@@ -29,8 +45,8 @@
 }
 </script>
 
-<div class="card mb-3" style="background-color:rgba(0,0,0,0.8);">
-  <div class="card-body">
+<div class="card mb-3" style="background-color:rgba(0,0,0,0.7);">
+  <div class="card-body" id="oculto">
     <div class="input-group xmb-3">
       <div class="input-group-prepend">
         <span class="input-group-text" id="numero">N°: </span>
@@ -69,16 +85,16 @@
     <div class="alert alert-success " style="display: none;" role="alert">
       Cadastro de parada realizado com sucesso!
     </div>
-    <button type="button" class="btn btn-block btn-primary cadastrarParada">Cadastrar</button>
-    <a href="../public/menuinicial" class="btn btn-block btn-danger btn-primary">Voltar</a>
+    <button type="button" class="col-lg-2 btn btn-primary cadastrarParada">Salvar</button>
+    <a href="../public/menuinicial" class="col-lg-2  btn btn-primary">Voltar</a>
   </div>
 
 
 
 
   <div>
-
-    <label>Paradas Cadastradas:</label>
+<button type="button" id="botao" class="btn btn-block btn-primary">Nova parada</button>
+    <label><h2>Paradas Cadastradas:</h2></label>
     <table class="table" >
       <thead>
         <tr>
@@ -101,7 +117,7 @@
             <td><?= $parada_onibus->getNumeroParada() ?> </td>
             <td><?= $parada_onibus->getLocal() ?>  </td>
             <td><?= $parada_onibus->getComplemento() ?>  </td>
-            <td><i class="fas fas-eye"><a class="btn btn-info btn-labeled" href="<?= $this->baseUrl('parada-onibus/editar/id/'. $parada_onibus['id_parada']) ?>" >Editar </a></i></td>
+            <td><i class="fas fas-eye"><a class="btn btn-primary btn-labeled" href="<?= $this->baseUrl('parada-onibus/editar/id/'. $parada_onibus['id_parada']) ?>" >Editar </a></i></td>
           </tr>
 
 
