conserto de bugs, e cadastro de forma de pagamento funcionando

--- a/application/views/scripts/categoria-onibus/editar.phtml
+++ b/application/views/scripts/categoria-onibus/editar.phtml
@@ -9,7 +9,7 @@
                     menuinicial/
                     </a>
                     <a href="<?= $this->baseUrl('parada-onibus') ?>">
-                    parada_onibus/
+                    categoria_onibus/
                     </a>
                 </li>
                 <li class="active">
@@ -49,7 +49,7 @@
 
 <br>
   <button type="submit" class="col-lg-2 btn btn-primary">Salvar</button>
-  <a href="<?= $this->baseUrl('parada-onibus') ?>" class="col-lg-2 btn btn-primary">Voltar</a>
+  <a href="<?= $this->baseUrl('categoria-onibus') ?>" class="col-lg-2 btn btn-primary">Voltar</a>
 
 
 
