--- a/application/views/scripts/categoria-onibus/index.phtml
+++ b/application/views/scripts/categoria-onibus/index.phtml
@@ -48,7 +48,7 @@
               <div class="input-group-prepend">
                 <span class="input-group-text" id="basic-addon1">R$</span>
               </div>
-              <input type="text" class="form-control" maxlength="3" id="tarifa" name="tarifa" placeholder="Digite a tarifa" />
+              <input type="text" class="form-control" maxlength="3" id="tarifa" name="tarifa" placeholder="Digite a tarifa" required/>
             </div>
             <div class="alert alert-danger diferente" style="display: none;" role="alert">
               Confirme novamente a tarifa!
