--- a/application/views/scripts/forma-pagamento/index.phtml
+++ b/application/views/scripts/forma-pagamento/index.phtml
@@ -31,6 +31,10 @@
     
     <div class="card mb-3" style="background-color:rgba(0,0,0,0.7);">  
 
+ <div class="form-popup" id="myForm">
+  
+</div> 
+
 
       <div id="oculto"class="card-body">
         <div id="cad_collapse">
@@ -44,7 +48,7 @@
           <div class="alert alert-success" style="display: none;" role="alert">
             Cadastrado com sucesso!
           </div>
-          <button type="button" class="col-lg-2 btn  btn-primary formaDePagamento">Cadastrar</button>
+          <button type="button" class="col-lg-2 btn  btn-primary cadastrarFormaPagamento">Cadastrar</button>
           <a href="../public/menuinicial" class="col-lg-2  btn btn-primary">Voltar</a>   
         </div>
       </div>
@@ -54,7 +58,7 @@
         <button type="button" id="botao" class="btn btn-block btn-primary">Nova forma</button>
         <label><H3>Formas de Pagamento:</H3></label>
         <br>
-
+        
 
         <br> 
         <table class="table">
