--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -58,6 +58,7 @@
         <script type="text/javascript" src="<?= $this->baseUrl('dist/js/bootstrap.js') ?>"></script>
         <script type="text/javascript" src="<?= $this->baseUrl('dist/js/mask.js') ?>"></script>
         <script type="text/javascript" src="<?= $this->baseUrl('dist/js/categoria.js') ?>"></script>
+        <script type="text/javascript" src="<?= $this->baseUrl('dist/js/bootbox.min.js') ?>"></script>
         <?= $this->headScript(); ?>
     </body>
 </html>
