Algumas melhorias no layout e botoes
Ocultado a exibição do ID para o usuario

--- a/application/views/scripts/forma-pagamento/index.phtml
+++ b/application/views/scripts/forma-pagamento/index.phtml
@@ -2,8 +2,6 @@
   <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/forma-pagamento.css")?> />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script>
-
-
     $(document).ready(function(){
 
       $("div#oculto").hide();
@@ -12,12 +10,10 @@
         $("div#oculto").toggle("slow");
       });
     });
-
   </script>
   <div class="row" >
     <div class="col-lg-2"></div>
     <div class="col-8">
-
      <ol class="breadcrumb" style="background-color:rgba(0,0,0,0.7);">
       <li>
         <a href="<?= $this->baseUrl('menuinicial') ?>">
@@ -30,102 +26,78 @@
     </ol>
     
     <div class="card mb-3" style="background-color:rgba(0,0,0,0.7);">  
-
- <div class="form-popup" id="myForm">
-  
-</div> 
-
-
-      <div id="oculto"class="card-body">
-        <div id="cad_collapse">
-          <div class="form-group">
-            <label for="">Nova forma de pagamento: </label>
-            <input type="text" class="form-control" id="descricao" name="descricao" placeholder="Digite a forma de pagamento" required/>
-          </div>
-          <div class="alert alert-danger diferente" style="display: none;" role="alert">
-            Confirme novamente a descricao!
-          </div>            
-          <div class="alert alert-success" style="display: none;" role="alert">
-            Cadastrado com sucesso!
-          </div>
-          <button type="button" class="col-lg-2 btn  btn-primary cadastrarFormaPagamento">Cadastrar</button>
-          <a href="../public/menuinicial" class="col-lg-2  btn btn-primary">Voltar</a>   
+     <div id="oculto"class="card-body">
+      <div id="cad_collapse">
+        <div class="form-group">
+          <input type="text" class="form-control" id="descricao" name="descricao" placeholder="Digite a forma de pagamento" required/>
         </div>
+        <div class="alert alert-danger diferente" style="display: none;" role="alert">
+          Confirme novamente a descricao!
+        </div>            
+        <div class="alert alert-success" style="display: none;" role="alert">
+          Cadastrado com sucesso!
+        </div>
+        <button type="button" class="col-lg-2 btn  btn-primary cadastrarFormaPagamento">Cadastrar</button>
+        <a href="../public/menuinicial" class="col-lg-2  btn btn-primary">Voltar</a>   
       </div>
-
-
-      
-        <button type="button" id="botao" class="btn btn-block btn-primary">Nova forma</button>
-        <label><H3>Formas de Pagamento:</H3></label>
-        <br>
-        
-
-        <br> 
-        <table class="table">
-          <thead>
-            <tr>
-              <th scope="col">Foma de Pagamento</th>
-              <th scope="col">Status</th>
-              <th scope="col">Ações</th>
-
-
-            </tr>
-          </thead>
-          <tbody>
-
-            <? foreach ($this->listarFormaPagamento  as $forma_pagamento): ?>
-
-              <tr>
-
-                <td><?= $forma_pagamento->getDescricao() ?> </td>
-                <td>
-
-
-
-
-
-                  <?php if ($forma_pagamento['status'] === 'ATIVO'): ?>
-                    <div class="btn-group" id="status" data-toggle="buttons">
-                      <label class="btn btn-default status-on btn-on aberto active" onclick="editarStatus(<?= $forma_pagamento['id_pagamento'] ?>,'ATIVO')">
-                        <input type="radio" name="plug" checked="checked">
-                        ATIVO
-                      </label>
-                      <label class="btn btn-default btn-off fechado" onclick="editarStatus(<?= $forma_pagamento['id_pagamento'] ?>,'INATIVO')">
-                        <input type="radio" name="plug">
-                        INATIVO
-                      </label>
-                    </div>
-                  <?php endif; ?>
-
-                  <?php if ($forma_pagamento['status'] === 'INATIVO'): ?>
-                    <div class="btn-group" id="status" data-toggle="buttons">
-                      <label class="btn btn-default btn-on aberto" onclick="editarStatus(<?= $forma_pagamento['id_pagamento'] ?>,'ATIVO')">
-                        <input type="radio" name="plug" checked="checked">
-                        ATIVO
-                      </label>
-                      <label class="btn btn-default btn-off fechado active" onclick="editarStatus(<?= $forma_pagamento['id_pagamento'] ?>,'INATIVO')">
-                        <input type="radio" name="plug">
-                        INATIVO
-                      </label>
-                    </div>
-                  <?php endif; ?>
-
-
-
-                </td>
-                <td><i class="fas fas-eye"><a class="btn btn-primary btn-labeled" href="<?= $this->baseUrl('forma-pagamento/editar/id/'. $forma_pagamento->getId_pagamento()) ?>" >Editar </a></i></td>
-              </tr>
-
-
-
-            <? endforeach; ?>
-          </tbody>
-        </table>
-
-      </div>
-
     </div>
+
+
+
+    <button type="button" id="botao" class="btn btn-block btn-primary">Nova forma</button>
+    <label><H3>Formas de Pagamento:</H3></label>
+    <br>
+
+
+    <br> 
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">Descrição</th>
+          <th scope="col">Status</th>
+          <th scope="col">Ações</th>
+        </tr>
+      </thead>
+      <tbody>
+        <? foreach ($this->listarFormaPagamento  as $forma_pagamento): ?>
+          <tr>
+            <td><?= $forma_pagamento->getDescricao() ?> </td>
+            <td>
+              <?php if ($forma_pagamento['status'] === 'ATIVO'): ?>
+                <div class="btn-group" id="status" data-toggle="buttons">
+                  <label class="btn btn-default status-on btn-on aberto active" onclick="editarStatus(<?= $forma_pagamento['id_pagamento'] ?>,'ATIVO')">
+                    <input type="radio" name="plug" checked="checked">
+                    ATIVO
+                  </label>
+                  <label class="btn btn-default btn-off fechado" onclick="editarStatus(<?= $forma_pagamento['id_pagamento'] ?>,'INATIVO')">
+                    <input type="radio" name="plug">
+                    INATIVO
+                  </label>
+                </div>
+              <?php endif; ?>
+
+              <?php if ($forma_pagamento['status'] === 'INATIVO'): ?>
+                <div class="btn-group" id="status" data-toggle="buttons">
+                  <label class="btn btn-default btn-on aberto" onclick="editarStatus(<?= $forma_pagamento['id_pagamento'] ?>,'ATIVO')">
+                    <input type="radio" name="plug" checked="checked">
+                    ATIVO
+                  </label>
+                  <label class="btn btn-default btn-off fechado active" onclick="editarStatus(<?= $forma_pagamento['id_pagamento'] ?>,'INATIVO')">
+                    <input type="radio" name="plug">
+                    INATIVO
+                  </label>
+                </div>
+              <?php endif; ?>
+
+            </td>
+            <td><i class="fas fas-eye"><a class="btn btn-primary btn-labeled" href="<?= $this->baseUrl('forma-pagamento/editar/id/'. $forma_pagamento->getId_pagamento()) ?>" >Editar </a></i></td>
+          </tr>
+        <? endforeach; ?>
+      </tbody>
+    </table>
   </div>
+</div>
+</div>
 </div>
 <div class="col-lg-2"></div>
 </div>
