--- a/application/views/scripts/categoria-onibus/index.phtml
+++ b/application/views/scripts/categoria-onibus/index.phtml
@@ -2,20 +2,20 @@
 	<link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/forma-pagamento.css")?> />
   <div class="row">
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-  <script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script>
 
 
-    $(document).ready(function(){
+      $(document).ready(function(){
 
-      $("div#oculto").hide();
+        $("div#oculto").hide();
 
-      $("button#botao").click(function(){
-        $("div#oculto").toggle("slow");
+        $("button#botao").click(function(){
+          $("div#oculto").toggle("slow");
+        });
       });
-    });
 
-  </script>
+    </script>
 
     <div class="col-lg-2"></div>
     <div class="col-8">
@@ -32,84 +32,60 @@
       </ol>
 
       <form method="POST">
-
-      <div class="card mb-3" style="background-color:rgba(0,0,0,0.8);">
-        <div class="card-body" id="oculto">
-          <div id="cad_collapse">
-            <div class="form-group">
-              <input type="text" class="form-control" id="descricao" name="descricao" placeholder="Digite a descrição" required/>
-            </div>
-            <div class="alert alert-danger diferente" style="display: none;" role="alert">
-              Confirme novamente a descricao!
-            </div>
-
-
-            <div class="input-group xmb-3">
-              <div class="input-group-prepend">
-                <span class="input-group-text" id="basic-addon1">R$</span>
+        <div class="card mb-3" style="background-color:rgba(0,0,0,0.8);">
+          <div class="card-body" id="oculto">
+            <div id="cad_collapse">
+              <div class="form-group">
+                <input type="text" class="form-control" id="descricao" name="descricao" placeholder="Digite a descrição" required/>
               </div>
-              <input type="text" class="form-control" maxlength="3" id="tarifa" name="tarifa" placeholder="Digite a tarifa" required/>
+              <div class="alert alert-danger diferente" style="display: none;" role="alert">
+                Confirme novamente a descricao!
+              </div>
+              <div class="input-group xmb-3">
+                <div class="input-group-prepend">
+                  <span class="input-group-text" id="basic-addon1">R$</span>
+                </div>
+                <input type="text" class="form-control" maxlength="3" id="tarifa" name="tarifa" placeholder="Digite a tarifa" required/>
+              </div>
+              <div class="alert alert-danger diferente" style="display: none;" role="alert">
+                Confirme novamente a tarifa!
+              </div>
+              <br>
+              <div class="alert alert-success" style="display: none;" role="alert">
+                Cadastro de tarifa realizado com sucesso!
+              </div>
+              <button type="button" class="col-lg-2  btn btn-primary cadastrarTarifa">Cadastrar</button>
+              <a href="../public/menuinicial" class="col-lg-2  btn btn-primary">Voltar</a>
             </div>
-            <div class="alert alert-danger diferente" style="display: none;" role="alert">
-              Confirme novamente a tarifa!
-            </div>
+          </div>
 
 
-            <br>
-
-            <div class="alert alert-success" style="display: none;" role="alert">
-              Cadastro de tarifa realizado com sucesso!
-            </div>
-            <button type="button" class="col-lg-2  btn btn-primary cadastrarTarifa">Cadastrar</button>
-            <a href="../public/menuinicial" class="col-lg-2  btn btn-primary">Voltar</a>
+          <div>
+            <button type="button" id="botao" class="btn btn-block btn-primary">Nova categoria</button>
+            <label><H2>Categorias Cadastradas:</H2></label>
+            <table class="table" >
+              <thead>
+                <tr>
+                  <!-- <th scope="col">ID</th> -->
+                  <th scope="col">Categoria</th>
+                  <th scope="col">Tarifa</th>
+                  <th scope="col">Ações</th>
+                </tr>
+              </thead>
+              <tbody>
+                <? foreach ($this->listarCategoriaOnibus  as $categoria_onibus): ?>
+                  <tr>
+                    <!-- <td><?= $categoria_onibus->getId_categoria_onibus() ?></td> -->
+                    <td><?= $categoria_onibus->getDescricao() ?> </td>
+                    <td><?= $categoria_onibus->getTarifa() ?>  </td>
+                    <td><i class="fas fas-eye"><a class="btn btn-primary btn-labeled" href="<?= $this->baseUrl('categoria-onibus/editar/id/'. $categoria_onibus['id_categoria_onibus']) ?>" >Editar </a></i></td>
+                  </tr>
+                <? endforeach; ?>
+              </tbody>
+            </table>
           </div>
         </div>
-
-
-
-
-
-        <div>
-        <button type="button" id="botao" class="btn btn-block btn-primary">Nova categoria</button>
-          <label><H2>Categorias Cadastradas:</H2></label>
-          <table class="table" >
-            <thead>
-              <tr>
-                <th scope="col">ID</th>
-                <th scope="col">Categoria</th>
-                <th scope="col">Tarifa</th>
-                <th scope="col">Ações</th>
-
-
-              </tr>
-            </thead>
-            <tbody>
-
-              <? foreach ($this->listarCategoriaOnibus  as $categoria_onibus): ?>
-
-                <tr>
-
-                  <td><?= $categoria_onibus->getId_categoria_onibus() ?></td>
-                  <td><?= $categoria_onibus->getDescricao() ?> </td>
-                  <td><?= $categoria_onibus->getTarifa() ?>  </td>
-                  <td><i class="fas fas-eye"><a class="btn btn-primary btn-labeled" href="<?= $this->baseUrl('categoria-onibus/editar/id/'. $categoria_onibus['id_categoria_onibus']) ?>" >Editar </a></i></td>
-                </tr>
-  
-
-
-              <? endforeach; ?>
-            </tbody>
-          </table>
-
-
-
-
-
-        </div>
-      </div>
-
-    </form>
-    <div class="col-lg-2"></div>
+      </form>
+      <div class="col-lg-2"></div>
+    </div>
   </div>
-
-</div>
